# home-assistant-sofabaton-x1s

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  hacs.json  package-lock.json  package.json  playwright.config.cjs  pyproject.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  support_request.yml
.github/workflows/: frontend-ci.yml  hacs.yaml  hassfest.yaml  release.yml  sofabaton-x-ci.yml  sofabaton-x-release.yml  sofapython-ci.yml  sofapython-release.yml
IrScrutinizer/: README.md  sofabaton-x.xml  sofabaton-x2.xml  x2-protocols.md
custom_components/sofabaton_x1s/: __init__.py  binary_sensor.py  button.py  cache_store.py  command_config.py  config_flow.py  const.py  diagnostics.py  hub.py  logging_utils.py  manifest.json  remote.py  roku_listener.py  select.py  sensor.py  services.yaml  switch.py  text.py  ui_settings_store.py
docs/: actions.md  backup.md  blobs.md  command_payloads.md  control-panel-translation-back-review.md  fetch_command.md  logging.md  networking.md  power-corner-design.md  translations.md  wifi_commands.md
docs/examples/: pyscript_provision.py
docs/protocol/: README.md  ack-handling.md  connection-flow.md  data-structures.md  erase.md  frame-format.md  hub-versions.md  live-hub-testing.md  opcodes.md  reference-impl.md  wifi-commands.md  write-flows.md
docs/translations/: ar-backtranslation.md  es-backtranslation.md  fr-backtranslation.md  zh-hans-backtranslation.md  zh-hans-control-panel-review.md  zh-hans-glossary.md
scripts/: .ha-config.example.json  build-frontend-tests.mjs  build-remote-card.mjs  build-tools-card.mjs  deploy-ha.ps1  serve-playwright-fixtures.mjs
scripts/hub-bench/: bench_01_recon.py  bench_100_device_ip_sync.py  bench_101_reorder_capture.py  bench_102_reorder_write.py  bench_103_roleslot_recon.py  bench_104_roleslot_probe.py  bench_105_roleslot_fwd_write.py  bench_106_roleslot_member_add.py  bench_107_input_switch.py  bench_108_cleanup.py  bench_108_macro_order_probe.py  bench_108_recon.py  bench_109_fixup.py  bench_109_macro_reorder_sync.py  bench_10_activity_recon.py  bench_110_device_reorder_write.py  bench_111_inplace_recon.py  bench_111b_diag.py  bench_111c_x1_probe.py  bench_111d_chain_probe.py  bench_111e_slot_probe.py  bench_111f_x1_power_fire.py  bench_112_command_delete.py  bench_112b_cleanup.py  bench_113_membership_remove.py  bench_114_inplace_resync.py  bench_115_shape_dump.py  bench_116_ha_inplace_e2e.py  bench_11_activity_create.py  bench_120_seq_probe.py  bench_121_seq_devrt.py  bench_122_seq_hubname.py  bench_123_seq_playblob.py  bench_124_seq_stress.py  bench_130_ha_ws_smoke.py  bench_131_ha_ws_contention.py  bench_140_events_capacity.py  bench_141_events_memberless_refs.py  bench_141b_actdiff.py  bench_141c_order_fix.py  (+41 more)
sofabaton-x/: README.md
sofabaton-x/examples/: backup.py  catalog_details.py  discover.py  minimal_proxy.py  restore_ip_device.py  watch.py  wifi_http_listener.py
sofapython/: README.md
sofapython/examples/: backup.py  catalog_details.py  discover.py  minimal_proxy.py  watch.py  wifi_http_listener.py
tests/: conftest.py  test_ack_handling.py  test_activity_reorder_create.py  test_activity_sync_exec.py  test_activity_sync_plan.py  test_activity_sync_ws.py  test_backend_translations.py  test_backup_ws.py  test_blob_decoders.py  test_blobs_ws.py  test_bundle_validation.py  test_cache_refresh_ws.py  test_call_me_demuxer.py  test_card_loader_frontend.py  test_cli_import.py  test_command_config_store.py  test_command_records_from_assembled.py  test_command_sync_ws.py  test_commands.py  test_config_flow_discovery.py  test_deframer.py  test_device_create.py  test_device_sync_plan.py  test_devices.py  test_frame_handlers.py  test_ha_action_writer_parity.py  test_helpers.py  test_hub_bundle.py  test_hub_commands.py  test_hub_inplace_sync.py  test_hub_listener.py  test_init_version_metadata.py  test_ip_commands.py  test_ir_descriptive_backup_roundtrip.py  test_keymap_records.py  test_logging_utils.py  test_logs_ws.py  test_macro_records_from_region.py  test_macros.py  test_notify_demuxer.py  (+37 more)
tests/frontend/: activities-tab.test.ts  activity-diff.test.ts  activity-reorder.test.ts  automation-assist-controller.test.ts  (+19 more)
tests/frontend-dist/: activities-tab.test.js  activity-diff.test.js  activity-reorder.test.js  backup-state.test.js  backup-tab.test.js  blobs-state.test.js  control-panel-store.test.js  edit-detail-view.test.js  editor-invariants.test.js  tools-card.test.js  wifi-commands-state.test.js  wifi-commands-tab.test.js
(+151 files in other folders)
